fix: move review test folder